--- a/appveyor.yml
+++ b/appveyor.yml
@@ -28,8 +28,8 @@ test_script:
 
   - >-
     OpenCover\tools\OpenCover.Console -returntargetcode -register:user
-    -target:xunit.console.clr4.exe
-    -targetargs:"net\DevExtreme.AspNet.Data.Tests.NET40\bin\Debug\DevExtreme.AspNet.Data.Tests.dll /noshadow"
+    -target:%xunit20%\xunit.console.exe
+    -targetargs:"net\DevExtreme.AspNet.Data.Tests.NET40\bin\Debug\DevExtreme.AspNet.Data.Tests.dll -noshadow"
     -filter:"+[DevExtreme*]* -[DevExtreme.AspNet.Data.Tests]*"
     -output:coverage_netfx.xml
 
