--- a/appveyor.yml
+++ b/appveyor.yml
@@ -29,8 +29,11 @@ test_script:
   - >-
     OpenCover\tools\OpenCover.Console -returntargetcode -register:user
     -target:%xunit20%\xunit.console.exe
-    -targetargs:"net\DevExtreme.AspNet.Data.Tests.NET40\bin\Debug\DevExtreme.AspNet.Data.Tests.dll -noshadow"
-    -filter:"+[DevExtreme*]* -[DevExtreme.AspNet.Data.Tests]*"
+    -targetargs:"
+    net\DevExtreme.AspNet.Data.Tests.NET40\bin\Debug\DevExtreme.AspNet.Data.Tests.dll
+    net\DevExtreme.AspNet.Data.Tests.EF6\bin\Debug\DevExtreme.AspNet.Data.Tests.EF6.dll
+    -noshadow"
+    -filter:"+[DevExtreme*]* -[DevExtreme.AspNet.Data.Tests]* -[DevExtreme.AspNet.Data.Tests.*]*"
     -output:coverage_netfx.xml
 
 after_test:
