--- a/.editorconfig
+++ b/.editorconfig
@@ -9,7 +9,7 @@ indent_size = 4
 [*.md]
 trim_trailing_whitespace = false
 
-[*.{json,yml,csproj,config,Config}]
+[*.{json,yml}]
 indent_size = 2
 
 [*.cs]
