--- a/net/Sample/Sample.csproj
+++ b/net/Sample/Sample.csproj
@@ -30,4 +30,9 @@
     </None>
   </ItemGroup>
 
+  <!-- https://github.com/dotnet/sdk/issues/1055#issuecomment-292792445 -->
+  <Target Name="PreBuild" BeforeTargets="PreBuildEvent">
+    <Exec Command="copy $(ProjectDir)\..\..\js\*.js $(ProjectDir)\wwwroot\lib" />
+  </Target>
+
 </Project>
