Add EFCore test project

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -28,6 +28,13 @@ test_script:
     -output:coverage_netcore.xml
 
   - >-
+    OpenCover\tools\OpenCover.Console -returntargetcode -register:user -oldstyle
+    -target:dotnet.exe
+    -targetargs:"test net\DevExtreme.AspNet.Data.Tests.EFCore\DevExtreme.AspNet.Data.Tests.EFCore.csproj"
+    -filter:"+[DevExtreme*]* -[DevExtreme.AspNet.Data.Tests.EFCore]*"
+    -output:coverage_efcore.xml
+
+  - >-
     OpenCover\tools\OpenCover.Console -returntargetcode -register:user
     -target:%xunit20%\xunit.console.exe
     -targetargs:"
@@ -42,7 +49,7 @@ after_test:
   - if defined RELEASE_KEY_SECRET dotnet pack net\DevExtreme.AspNet.Data --configuration=Release
 
 on_success:
-  - codecov -X gcov -f coverage_netcore.xml coverage_netfx.xml js-test/coverage/lcov.info
+  - codecov -X gcov -f coverage_netcore.xml coverage_efcore.xml coverage_netfx.xml js-test/coverage/lcov.info
 
 artifacts:
   - path: net\DevExtreme.AspNet.Data\bin\Release\*.nupkg
