--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "karma-phantomjs-launcher": "^1.0.2",
     "karma-qunit": "^1.2.1",
     "qunitjs": "^2.1.1",
-    "typescript": "^2.0.10",
+    "typescript": "~2.3.0",
     "webpack": "^1.14.0"
   },
   "scripts": {
