--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@types/jquery": "^2.0.39",
+    "devextreme": ">=16.2.8",
     "eclint": "^2.0.1",
     "jquery": "^2.2.4",
     "jquery-mockjax": "^2.2.1",
@@ -28,7 +29,7 @@
     "karma-phantomjs-launcher": "^1.0.2",
     "karma-qunit": "^1.2.1",
     "qunitjs": "^2.1.1",
-    "typescript": "~2.3.0",
+    "typescript": "^2.0.10",
     "webpack": "^1.14.0"
   },
   "scripts": {
