--- a/net/DevExtreme.AspNet.Data.Tests.NET40/packages.config
+++ b/net/DevExtreme.AspNet.Data.Tests.NET40/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net40" />
   <package id="xunit" version="1.9.2" targetFramework="net40" />
+  <package id="xunit.extensions" version="1.9.2" targetFramework="net40" />
   <package id="xunit.runner.visualstudio" version="2.1.0" targetFramework="net40" />
 </packages>
