--- a/net/DevExtreme.AspNet.Data.Tests.NET40/packages.config
+++ b/net/DevExtreme.AspNet.Data.Tests.NET40/packages.config
@@ -3,5 +3,5 @@
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net40" />
   <package id="xunit" version="1.9.2" targetFramework="net40" />
   <package id="xunit.extensions" version="1.9.2" targetFramework="net40" />
-  <package id="xunit.runner.visualstudio" version="2.1.0" targetFramework="net40" />
+  <package id="xunit.runner.visualstudio" version="2.3.1" targetFramework="net40" developmentDependency="true" />
 </packages>
