--- a/docfx/filterConfig.yml
+++ b/docfx/filterConfig.yml
@@ -1,6 +1,6 @@
 apiRules:
 - exclude:
-    uidRegex: ^DevExtreme\.AspNet\.Data\.Helpers$
-    type: Namespace
+    uidRegex: ^DevExtreme\.AspNet\.Data\.Helpers\.Compat$
+    type: Class
 - exclude:
     uidRegex: ^System\.Object\.
