--- a/appveyor.yml
+++ b/appveyor.yml
@@ -47,7 +47,7 @@ test_script:
 
 after_test:
   - npm pack
-  - cmd /c docfx\build
+  - cmd /c net\docfx\build
   - if defined RELEASE_KEY_SECRET dotnet pack net\DevExtreme.AspNet.Data --configuration=Release
 
 on_success:
@@ -56,4 +56,4 @@ on_success:
 artifacts:
   - path: net\DevExtreme.AspNet.Data\bin\Release\*.nupkg
   - path: devextreme-aspnet-data-*.tgz
-  - path: docs
+  - path: net\docfx\build\docfx-site
