--- a/net/DevExtreme.AspNet.Data.Tests.NET4/packages.config
+++ b/net/DevExtreme.AspNet.Data.Tests.NET4/packages.config
@@ -1,7 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
-  <package id="xunit" version="1.9.2" targetFramework="net40" />
-  <package id="xunit.extensions" version="1.9.2" targetFramework="net40" />
+  <package id="xunit" version="2.3.1" targetFramework="net461" />
+  <package id="xunit.abstractions" version="2.0.1" targetFramework="net461" />
+  <package id="xunit.analyzers" version="0.7.0" targetFramework="net461" />
+  <package id="xunit.assert" version="2.3.1" targetFramework="net461" />
+  <package id="xunit.core" version="2.3.1" targetFramework="net461" />
+  <package id="xunit.extensibility.core" version="2.3.1" targetFramework="net461" />
+  <package id="xunit.extensibility.execution" version="2.3.1" targetFramework="net461" />
   <package id="xunit.runner.visualstudio" version="2.3.1" targetFramework="net40" developmentDependency="true" />
 </packages>
