--- a/net/DevExtreme.AspNet.Data.Tests.NET4/packages.config
+++ b/net/DevExtreme.AspNet.Data.Tests.NET4/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
   <package id="xunit" version="2.3.1" targetFramework="net461" />
   <package id="xunit.abstractions" version="2.0.1" targetFramework="net461" />
   <package id="xunit.analyzers" version="0.8.0" targetFramework="net461" />
@@ -8,5 +8,5 @@
   <package id="xunit.core" version="2.3.1" targetFramework="net461" />
   <package id="xunit.extensibility.core" version="2.3.1" targetFramework="net461" />
   <package id="xunit.extensibility.execution" version="2.3.1" targetFramework="net461" />
-  <package id="xunit.runner.visualstudio" version="2.3.1" targetFramework="net461" developmentDependency="true" />
+  <package id="xunit.runner.visualstudio" version="2.3.1" targetFramework="net40" developmentDependency="true" />
 </packages>
