--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "jquery": "^2.2.4",
     "jshint": "^2.9.2",
     "karma": "^1.3.0",
+    "karma-chrome-launcher": "^2.2.0",
     "karma-coverage": "^1.1.1",
-    "karma-phantomjs-launcher": "^1.0.2",
     "karma-qunit": "^1.2.1",
     "qunitjs": "^2.1.1",
     "typescript": "^2.0.10",
