--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@types/jquery": "^2.0.39",
+    "bluebird": "^3.5.1",
     "devextreme": ">=16.2.8",
     "eclint": "^2.0.1",
     "jquery": "^2.2.4",
