--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "karma": "^1.3.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-coverage": "^1.1.1",
+    "karma-ie-launcher": "^1.0.0",
     "karma-qunit": "^1.2.1",
     "qunitjs": "^2.1.1",
     "typescript": "^2.0.10",
