--- a/package.json
+++ b/package.json
@@ -36,9 +36,9 @@
   },
   "scripts": {
     "make-nojquery": "node build/make-nojquery",
-    "test": "jshint --verbose js/dx.aspnet.data.js && npm run -s test-eclint && npm run -s test-karma-jquery && npm run -s test-karma-nojquery && npm run -s test-dts",
+    "test": "jshint --verbose js && npm run -s test-eclint && npm run -s test-karma-jquery && npm run -s test-karma-nojquery && npm run -s test-dts",
     "test-karma-jquery": "cd js-test && webpack --define ASPNET_DATA_SCRIPT='../js/dx.aspnet.data.js' test.js test-bundle.js && karma start && karma start --bundled",
-    "test-karma-nojquery": "cd js-test && webpack --define ASPNET_DATA_SCRIPT='../js/dx.aspnet.data.nojquery.js' test.js test-bundle.js && karma start --bundled",
+    "test-karma-nojquery": "cd js-test && webpack --define ASPNET_DATA_SCRIPT='../js-nojquery/index.js' test.js test-bundle.js && karma start --bundled",
     "test-dts": "cd js-test && tsc check-ts-compilation.ts && tsc check-ts-compilation.nojquery.ts",
     "test-eclint": "eclint check *.{yml,json} {net,js,js-test}/**/*.{cs,js,ts,html,json,cshtml,tt} !net/**/{bin,obj}/** !net/docfx/build/** !js-test/test-bundle.js !net/Sample/{node_modules,wwwroot/lib}/**"
   }
