Ensure JSHint is ok

--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "xhr-mock": "^2.0.3"
   },
   "scripts": {
-    "test": "jshint --verbose js && npm run -s test-eclint && npm run -s test-karma-jquery && npm run -s test-karma-nojquery && npm run -s test-dts",
+    "test": "jshint --verbose js js-nojquery && npm run -s test-eclint && npm run -s test-karma-jquery && npm run -s test-karma-nojquery && npm run -s test-dts",
     "test-karma-jquery": "cd js-test && webpack --define ASPNET_DATA_SCRIPT='../js/dx.aspnet.data.js' test.js test-bundle.js && karma start && karma start --bundled",
     "test-karma-nojquery": "cd js-test && webpack --define ASPNET_DATA_SCRIPT='../js-nojquery/index.js' test.js test-bundle.js && karma start --bundled",
     "test-dts": "cd js-test && tsc check-ts-compilation.ts && tsc check-ts-compilation.nojquery.ts",
