Introduce a jQuery-free NPM package (#178)

--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,11 @@ obj/
 node_modules/
 net/packages/
 net/DevExtreme.AspNet.Data/release.snk
+/js-nojquery/
 /js-test/coverage/
 /js-test/test-bundle.js
 /js-test/check-ts-compilation.js
+/js-test/check-ts-compilation.nojquery.*
 **/wwwroot/lib/
 project.lock.json
 *.suo
