--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,6 +12,7 @@ install:
   - node build/make-nojquery
   - powershell -File build\replace-meta.ps1 %APPVEYOR_BUILD_NUMBER% %APPVEYOR_REPO_TAG_NAME%
   - npm install
+  - npm install "devextreme@>=17.2.6-pre-18033"
   - dotnet restore net\DevExtreme.AspNet.Data.sln
   - nuget restore net\DevExtreme.AspNet.Data.sln -Verbosity quiet
 
