--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,7 +12,6 @@ install:
   - node build/make-nojquery
   - powershell -File build\replace-meta.ps1 %APPVEYOR_BUILD_NUMBER% %APPVEYOR_REPO_TAG_NAME%
   - npm install
-  - npm install "devextreme@>=17.2.6-pre-18044"
   - dotnet restore net\DevExtreme.AspNet.Data.sln
   - nuget restore net\DevExtreme.AspNet.Data.sln -Verbosity quiet
 
@@ -20,7 +19,16 @@ build_script:
   - dotnet build net\DevExtreme.AspNet.Data.sln
 
 test_script:
-  - npm test
+  - npm run eclint
+  - npm run jshint
+
+  - npm i --no-save "devextreme@~16.2.0"
+  - npm run karma
+
+  - npm i --no-save "devextreme@>=17.2.6-pre-18044"
+  - npm run karma
+  - npm run karma-bundled
+  - npm run karma-bundled-nojquery
 
   - >-
     OpenCover\tools\OpenCover.Console -returntargetcode -register:user -oldstyle
