--- a/net/DevExtreme.AspNet.Data.Tests.EF6/DevExtreme.AspNet.Data.Tests.EF6.csproj
+++ b/net/DevExtreme.AspNet.Data.Tests.EF6/DevExtreme.AspNet.Data.Tests.EF6.csproj
@@ -71,6 +71,7 @@
   <ItemGroup>
     <Compile Include="Bug179.cs" />
     <Compile Include="Bug184.cs" />
+    <Compile Include="SelectNotMapped.cs" />
     <Compile Include="TestDbContext.cs" />
     <Compile Include="Bug112.cs" />
     <Compile Include="SampleLoadOptions.cs" />
