--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "qunitjs": "^2.1.1",
     "typescript": "^2.0.10",
     "webpack": "^1.14.0",
-    "xhr-mock": "^2.0.3"
+    "xhr-mock": "2.2.0"
   },
   "scripts": {
     "karma": "cd js-test && karma start",
