--- a/net/DevExtreme.AspNet.Data.Tests.EFCore1/DevExtreme.AspNet.Data.Tests.EFCore1.csproj
+++ b/net/DevExtreme.AspNet.Data.Tests.EFCore1/DevExtreme.AspNet.Data.Tests.EFCore1.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DevExtreme.AspNet.Data\DevExtreme.AspNet.Data.csproj" />
+    <ProjectReference Include="..\DevExtreme.AspNet.Data.Tests.Common\DevExtreme.AspNet.Data.Tests.Common.csproj" />
   </ItemGroup>
 
   <ItemGroup>
