--- a/net/DevExtreme.AspNet.Data.Tests.EF6/packages.config
+++ b/net/DevExtreme.AspNet.Data.Tests.EF6/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
+  <package id="System.Data.Common" version="4.1.0" targetFramework="net461" />
+  <package id="System.Data.SqlClient" version="4.1.0" targetFramework="net461" />
   <package id="xunit" version="2.3.1" targetFramework="net461" />
   <package id="xunit.abstractions" version="2.0.1" targetFramework="net461" />
   <package id="xunit.analyzers" version="0.8.0" targetFramework="net461" />
