--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "karma": "cd js-test && karma start",
     "karma-bundled": "cd js-test && webpack --define ASPNET_DATA_SCRIPT='../js/dx.aspnet.data.js' test.js test-bundle.js && karma start --bundled",
     "karma-bundled-nojquery": "cd js-test && webpack --define ASPNET_DATA_SCRIPT='../js-nojquery/index.js' test.js test-bundle.js && karma start --bundled",
+    "karma-bundled-nojquery-cjs": "cd js-test && webpack --define ASPNET_DATA_SCRIPT='../js-nojquery/index.js' --define define=false test.js test-bundle.js && karma start --bundled",
     "dts": "cd js-test && tsc check-ts-compilation.ts && tsc check-ts-compilation.nojquery.ts",
     "jshint": "jshint --verbose js js-nojquery",
     "eclint": "eclint check *.{yml,json} {net,js,js-test}/**/*.{cs,js,ts,html,json,cshtml,tt} !net/**/{bin,obj}/** !net/docfx/build/** !js-test/test-bundle.js !net/Sample/{node_modules,wwwroot/lib}/**"
