Update AppVeyor config

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -38,6 +38,7 @@ test_script:
     net\DevExtreme.AspNet.Data.Tests\bin\Debug\netcoreapp2.0\DevExtreme.AspNet.Data.Tests.dll
     net\DevExtreme.AspNet.Data.Tests.EFCore1\bin\Debug\netcoreapp2.0\DevExtreme.AspNet.Data.Tests.EFCore1.dll
     net\DevExtreme.AspNet.Data.Tests.EFCore2\bin\Debug\netcoreapp2.0\DevExtreme.AspNet.Data.Tests.EFCore2.dll
+    net\DevExtreme.AspNet.Data.Tests.NH\bin\Debug\netcoreapp2.0\DevExtreme.AspNet.Data.Tests.NH.dll
     "
     -filter:"+[DevExtreme*]* -[DevExtreme.AspNet.Data.Tests]* -[DevExtreme.AspNet.Data.Tests.*]*"
     -output:coverage_netcore.xml
